 * 1788029 PluginTree: Abilty to set receive target for a node
 * 1788976 Shorten toolbar button labels for core plugins
 * 1790611 Add new Google Calendar Features
 * 1790695 webplugin: open program URL
 * 1790897 remove settings root node
 * 1791219 Add country to channel name
 * 1791460 Add OS selection for plugin updates
 * 1792930 scroll channel wise horizontally

2.5.3beta3/2.5.3
================

-Bugs
 * 1746022 program table not updated if current filter is edited
 * 1746824 Marking problems on channels with different time zones
 * 1749152 Channels cannot be removed in Favorites channel restriction
 * 1749540 No connection timeout for SweDB and Radio Times data service
 
2.5.3beta2
==========

-Bugs
 * 1698591 #separator is too small to remove/modify it under MacOS
 * 1734355 no programs found if invalid exclusion in favorite
 * 1734692 Desc. and copyright for picture not readable
 * 1738621 NPE for LocaleSettingsTab
 * 1738622 Size of TV-Browser is not restored correct on startup
 * 1738735 NPE in WebPlugin 

2.5.3beta1
==========

-Bugs
 * 1634797 ConcurrentModificationException in ReminderTimerListener
 * 1680401 printing: plugin icons can't be removed
 * 1686450 SendToPluginDlg layout sometime destroyed
 * 1687340 TV-Browser transportable TV data import sometime didn't work
 * 1687346 Automatically data update runs every TV-Browser start
 * 1687497 layout restored wrongly switching plugin tree on or off
 * 1687537 Update of filtered view to slow
 * 1688332 Copy of TV data can result in an endless recursion
 * 1688716 No remind again field for 24 hour reminders
 * 1692658 Google Calendar Export TimeZone
 * 1701139 NPE on TV data deletion
 * 1705404 NewsPlugin shows old news as new news
 * 1705442 Scrolling to now didn't work sometime
 * 1707649 Reminder not selectable as ReceiveIf
 * 1717929 Comparing of channel not correct
 * 1722169 Boolean search missing parts
 * 1722642 Prevent windows showing outside of screen