@@ -25,6 +25,8 @@ ShowAllFilter.ShowAll=show all
 
 SubtitleFilter.Subtitled=Subtitled
 
+AudioDescriptionFilter.Audiodescription=Audio description
+
 PluginFilter.pluginfFilterName=marked programs
 
 Token.invalidToken=invalid token
